; ModuleID = '/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_buf.c_netplay_init_socket_buffer.c'
source_filename = "/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_buf.c_netplay_init_socket_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_buffer = type { i8*, i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @netplay_init_socket_buffer(%struct.socket_buffer* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.socket_buffer*, align 8
  %5 = alloca i64, align 8
  store %struct.socket_buffer* %0, %struct.socket_buffer** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = call i64 @malloc(i64 %6)
  %8 = inttoptr i64 %7 to i8*
  %9 = load %struct.socket_buffer*, %struct.socket_buffer** %4, align 8
  %10 = getelementptr inbounds %struct.socket_buffer, %struct.socket_buffer* %9, i32 0, i32 0
  store i8* %8, i8** %10, align 8
  %11 = load %struct.socket_buffer*, %struct.socket_buffer** %4, align 8
  %12 = getelementptr inbounds %struct.socket_buffer, %struct.socket_buffer* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

16:                                               ; preds = %2
  %17 = load i64, i64* %5, align 8
  %18 = load %struct.socket_buffer*, %struct.socket_buffer** %4, align 8
  %19 = getelementptr inbounds %struct.socket_buffer, %struct.socket_buffer* %18, i32 0, i32 1
  store i64 %17, i64* %19, align 8
  %20 = load %struct.socket_buffer*, %struct.socket_buffer** %4, align 8
  %21 = getelementptr inbounds %struct.socket_buffer, %struct.socket_buffer* %20, i32 0, i32 2
  store i64 0, i64* %21, align 8
  %22 = load %struct.socket_buffer*, %struct.socket_buffer** %4, align 8
  %23 = getelementptr inbounds %struct.socket_buffer, %struct.socket_buffer* %22, i32 0, i32 3
  store i64 0, i64* %23, align 8
  %24 = load %struct.socket_buffer*, %struct.socket_buffer** %4, align 8
  %25 = getelementptr inbounds %struct.socket_buffer, %struct.socket_buffer* %24, i32 0, i32 4
  store i64 0, i64* %25, align 8
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %16, %15
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
